# napari-sc3D-viewer

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yml
napari-sc3D-viewer/: meta.yaml
src/napari_sc3d_viewer/: __init__.py  _display_embryo.py  _umap_selection.py  _utils.py  _widget.py  _widget_load.py  _widget_register.py  napari.yaml
src/napari_sc3d_viewer/_tests/: test_widget.py
test_data/: corresptissues.json  data_test.h5ad  wrong_format.json
