[metadata]
name = napari-sc3D-viewer
version = 0.1.0
author = Leo Guignard
author_email = leo.guignard@univ-amu.fr
url = https://github.com/GuignardLab/napari-sc3D-viewer
license = MIT
description = A plugin to visualize 3D single cell omics
long_description = file: README.md
long_description_content_type = text/markdown
summary = A plugin to visualise 3D spatial single cell omics
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
project_urls =
    Bug Tracker = https://github.com/GuignardLab/napari-sc3D-viewer/issues
    Documentation = https://github.com/GuignardLab/napari-sc3D-viewer#README.md
    Source Code = https://github.com/GuignardLab/napari-sc3D-viewer
    User Support = https://github.com/GuignardLab/napari-sc3D-viewer/issues
    Twitter = https://twitter.com/guignardlab
python_requires = >=3.8
classifier =
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
package_dir =
    =src

# add your package requirements here
install_requires =
    numpy
    napari
    magicgui
    qtpy
    sc-3D
    matplotlib
    
[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5
pyvista =
    pyvista

[options.packages.find]
where = src

[options.package_data]
* = *.yaml

[options.entry_points]
napari.manifest =
    napari-sc3D-viewer = napari_sc3d_viewer:napari.yaml
